<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>dev.secondsun</groupId>
  <artifactId>tm4e4lsp</artifactId>
  <version>1.0</version>

  <name>tm4e4lsp</name>
  <url>https://github.com/secondsun/retro-lsp</url>

  <licenses>
      <license>
          <name>GNU General Public License v2.1</name>
          <url>https://github.com/secondsun/retro-lsp/blob/prototype/LICENSE</url>
      </license>
  </licenses>
  <developers>
      <developer>
          <name>Summers Pittman</name>
          <email>secondsun@gmail.com</email>
          <organization>MeMyselfAndI</organization>
          <organizationUrl>https://github.com/secondsun</organizationUrl>
      </developer>
  </developers>

  <scm>
    <connection>scm:git:git://github.com/secondsun/retro-lsp.git</connection>
    <developerConnection>scm:git:ssh://github.com:secondsun/retro-lsp.git</developerConnection>
    <url>http://github.com/secondsun/retro-lsp/tree/prototype</url>
    <tag>tm4e4lsp-1.0</tag>
  </scm>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>19</maven.compiler.source>
    <maven.compiler.target>19</maven.compiler.target>
  </properties>

  <dependencies>
    <dependency>
			<groupId>org.jruby.joni</groupId>
			<artifactId>joni</artifactId>
			<version>2.1.44</version>
		</dependency>
		<dependency>
			<groupId>org.jruby.jcodings</groupId>
			<artifactId>jcodings</artifactId>
			<version>1.0.58</version>
    </dependency>
    <dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.10</version>
		</dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>5.9.2</version>
      <scope>test</scope>
  </dependency>
		<dependency>
			<groupId>dev.secondsun</groupId>
			<artifactId>w3c0sac</artifactId>
			<version>1.0.0</version>
		</dependency>
    <dependency>
      <groupId>dev.secondsun</groupId>
      <artifactId>org.eclipse.tm4e.core</artifactId>
      <version>0.4.8</version>
    </dependency>

    <dependency>
      <groupId>dev.secondsun</groupId>
      <artifactId>languageserver</artifactId>
      <version>0.8</version>
    </dependency>
    
  </dependencies>

  <build>
    <plugins>
      
      <plugin>
        <artifactId>maven-dependency-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>copy-dependencies</goal>
            </goals>
            <phase>generate-resources</phase>
            <configuration>
              <includeScope>runtime</includeScope>
              <excludeTransitive>true</excludeTransitive>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <configuration>
          <archive>
            <manifest>
              <addClasspath>true</addClasspath>
              <classpathPrefix>dependency/</classpathPrefix>
              <mainClass>dev.secondsun.tm4e4lsp.Main</mainClass>
            </manifest>
          </archive>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>3.2.1</version>
        <executions>
            <execution>
                <id>attach-sources</id>
                <goals>
                    <goal>jar-no-fork</goal>
                </goals>
            </execution>
        </executions>
    </plugin>
    <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.4.1</version>
        <executions>
            <execution>
                <id>attach-javadocs</id>
                <goals>
                    <goal>jar</goal>
                </goals>
            </execution>
        </executions>
    </plugin>
    <!-- <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-gpg-plugin</artifactId>
        <version>3.0.1</version>
        <executions>
            <execution>
                <id>sign-artifacts</id>
                <phase>verify</phase>
                <goals>
                    <goal>sign</goal>
                </goals>
            </execution>
        </executions>
    </plugin> -->
    </plugins>
    <pluginManagement>
      <!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
      <plugins>
        <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
        <plugin>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.2.0</version>
        </plugin>
        <!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
        <plugin>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.3.0</version>
        </plugin>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.10.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.0.0-M7</version>
        </plugin>
        <plugin>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.3.0</version>
        </plugin>

        <plugin>
          <artifactId>maven-install-plugin</artifactId>
          <version>3.1.0</version>
        </plugin>
        <plugin>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>3.0.0</version>
        </plugin>
        <!-- site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
        <plugin>
          <artifactId>maven-site-plugin</artifactId>
          <version>4.0.0-M4</version>
        </plugin>
        <plugin>
          <artifactId>maven-project-info-reports-plugin</artifactId>
          <version>3.4.1</version>
        </plugin>

      </plugins>
    </pluginManagement>
  </build>
    <profiles>
    <profile>
      <id>native</id>
      <dependencies>
        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-launcher</artifactId>
            <version>1.9.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
      <build>
        <plugins>
          <plugin>
            <groupId>org.graalvm.buildtools</groupId>
            <artifactId>native-maven-plugin</artifactId>
            <version>0.9.20</version>
            <extensions>true</extensions>
            <executions>
              <execution>
                <id>build-native</id>
                <goals>
                  <goal>compile-no-fork</goal>
                </goals>
                <phase>package</phase>
              </execution>
              <execution>
                <id>test-native</id>
                <goals>
                  <goal>test</goal>
                </goals>
                <phase>test</phase>
              </execution>
            </executions>
            <configuration>
              <buildArgs>
                <arg>-H:ResourceConfigurationFiles=${project.basedir}/build/resource-config.json</arg>
                <arg>-H:ReflectionConfigurationFiles=${project.basedir}/build/reflect-config.json</arg>
              </buildArgs>
            </configuration>
          </plugin>
          

<plugin>
  <groupId>org.codehaus.mojo</groupId>
  <artifactId>exec-maven-plugin</artifactId>
  <version>3.1.0</version>
  <executions>
      <execution>
          <id>java-agent</id>
          <goals>
              <goal>exec</goal>
          </goals>
          <configuration>
              <executable>java</executable>
              <workingDirectory>${project.build.directory}</workingDirectory>
              <arguments>
                  <argument>-classpath</argument>
                  <classpath/>
                  <argument>dev.secondsun.tm4e4lsp.Main</argument>
              </arguments>
          </configuration>
      </execution>
  </executions>
</plugin>


        </plugins>
      </build>
    </profile>
  </profiles>
  
</project>
